--- a/qube_bringup/package.xml
+++ b/qube_bringup/package.xml
@@ -4,7 +4,7 @@
   <name>qube_bringup</name>
   <version>1.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="wahidas@stud.ntnu.no">wahid</maintainer>
+  <maintainer email="chrigrin@stud.ntnu.no">wahid</maintainer>
   <license>TODO: License declaration</license>
 
   <test_depend>ament_copyright</test_depend>
