Fix joint name consistency and improve Qube controllers
- Updated RViz configuration for better visualization
- Fixed motor_joint naming in controllers.yaml
- Updated PID controller to use motor_joint instead of rotary_joint
- Added proper hardware interface configuration
- Created debug launch file for testing

--- a/qube_driver/config/joint_controllers.yaml
+++ b/qube_driver/config/joint_controllers.yaml
@@ -1,14 +1,18 @@
 controller_manager:
   ros__parameters:
-    update_rate: 50  # Hz
-
+    update_rate: 100  # Hz
+    
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
-      
+    
     velocity_controller:
-      type: velocity_controllers/JointGroupVelocityController 
+      type: velocity_controllers/JointGroupVelocityController
+
+joint_state_broadcaster:
+  ros__parameters: {}
 
 velocity_controller:
   ros__parameters:
-    joints: 
-      - motor_joint
+    joints:
+      - motor_joint  # THIS MUST MATCH THE HARDWARE INTERFACE NAME
+    command_interface: velocity
