Fix joint name consistency and improve Qube controllers
- Updated motor_joint naming consistently in URDF and controllers
- Fixed PID controller to use motor_joint instead of rotary_joint
- Added debug launch file for testing
- Added proper RViz configuration
- Added controller configuration files

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,33 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+# Build directories
+build/
+install/
+log/
+
+# Python artifacts
+__pycache__/
+*.py[cod]
+*.class
+*.so
+.Python
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# ROS 2 specific
+**/build/
+**/install/
+**/log/
+qube_bringup/qube_bringup/build/
+qube_bringup/qube_bringup/install/
+qube_bringup/qube_bringup/log/
