--- a/qube_controller/package.xml
+++ b/qube_controller/package.xml
@@ -3,18 +3,21 @@
 <package format="3">
   <name>qube_controller</name>
   <version>0.0.1</version>
-  <description>Quanser Qube controller package</description>
-  <maintainer email="Wahidas@stud.ntnu.no">user</maintainer>
+  <description>Controller package for Quanser Qube</description>
+  <maintainer email="wahidas@stud.ntnu.no">wahid</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_python</buildtool_depend>
-  
+
   <depend>rclpy</depend>
-  <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
-  
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <depend>sensor_msgs</depend>
+  <depend>python3-tk</depend>
+
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
   <export>
     <build_type>ament_python</build_type>
