Refactor PID controller (Float64MultiArray) and simplify launch files and some trubleshooting

--- a/qube_bringup/config/controllers.yaml
+++ b/qube_bringup/config/controllers.yaml
@@ -14,5 +14,5 @@ joint_state_broadcaster:
 velocity_controller:
   ros__parameters:
     joints:
-      - motor_joint  # This matches the joint name in your URDF
+      - motor_joint  
     command_interface: velocity
