Improve PID controller and launch files for Quanser Qube and other code improvement

--- a/qube_driver/config/joint_controllers.yaml
+++ b/qube_driver/config/joint_controllers.yaml
@@ -1,6 +1,5 @@
 controller_manager:
   ros__parameters:
-
     update_rate: 50  # Hz
 
     joint_state_broadcaster:
@@ -11,6 +10,5 @@ controller_manager:
 
 velocity_controller:
   ros__parameters:
-    joints:
-      - motor_joint  # THIS MUST MATCH THE HARDWARE INTERFACE NAME
-    command_interface: velocity
+    joints: 
+      - motor_joint
