--- a/qube_bringup/package.xml
+++ b/qube_bringup/package.xml
@@ -8,7 +8,8 @@
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_python</buildtool_depend>
-
+  
+  <depend>xacro</depend>
   <depend>launch</depend>
   <depend>launch_ros</depend>
   <depend>qube_description</depend>
@@ -21,6 +22,7 @@
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
+  <test_depend>ament_xmllint</test_depend>
   <test_depend>python3-pytest</test_depend>
 
   <export>
